manifest/objects/LVGO__Case__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>Cases (Account)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset ID</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Case_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__BusinessHoursId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours ID</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Case_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Case_Area__c</fullName>
        <label>Case Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Error Message</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Page Layout/Fields</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Reporting/Dashboard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Case_Details__c</fullName>
        <label>Case Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Gainsight</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Spring CM</fullName>
                </value>
                <value>
                    <fullName>ZaapIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Case_Team__c</fullName>
        <label>Case Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B Marketing</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Client Implementation</fullName>
                </value>
                <value>
                    <fullName>Client Success</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
                <value>
                    <fullName>DOPS</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Enrollment Marketing</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Member Support/Ops</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales - HSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__City_State__c</fullName>
        <label>City &amp; State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large Market Employer</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Benefit Managers &amp; Consultants</fullName>
                </value>
                <value>
                    <fullName>Health Systems</fullName>
                </value>
                <value>
                    <fullName>Health Plans</fullName>
                </value>
                <value>
                    <fullName>Self-Insured Employers</fullName>
                </value>
                <value>
                    <fullName>Government &amp; Labor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__ClosedDate__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__Comments__c</fullName>
        <label>Internal Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__ContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LVGO__ContactFax__c</fullName>
        <label>Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>LVGO__Contact__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__ContactMobile__c</fullName>
        <label>Contact Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__ContactPhone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Email_1__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Email_2__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Name_1__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Name_2__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Phone_1__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Phone_2__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Role_Title_1__c</fullName>
        <label>Role/Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Role_Title_2__c</fullName>
        <label>Role/Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Contactid1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>LVGO__Contact__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__CreatedDate__c</fullName>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__CurrentUser_CreatedBy__c</fullName>
        <formula>IF( CreatedBy.Id  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser_CreatedBy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Employee_Count__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__I_would_like_to__c</fullName>
        <label>I would like to</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Industry_Type__c</fullName>
        <label>Industry Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__IsClosedOnCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed When Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__IsEscalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Is_the_request_for_an_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the request for an RFP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Jira_Link__c</fullName>
        <description>link to the Jira ticket representing this case in the sprint</description>
        <label>Jira Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LVGO__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_Programs__c</fullName>
        <label>Interested Livongo Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Livongo for Diabetes</fullName>
                </value>
                <value>
                    <fullName>Livongo for Hypertension</fullName>
                </value>
                <value>
                    <fullName>Livongo for Weight Management</fullName>
                </value>
                <value>
                    <fullName>Livongo for Diabetes Prevention</fullName>
                </value>
                <value>
                    <fullName>Livongo for Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>DM Solution</fullName>
                </value>
                <value>
                    <fullName>CV Solution</fullName>
                </value>
                <value>
                    <fullName>DP Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>LVGO__Opportunity__c</referenceTo>
        <relationshipName>Case_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Origin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Reference Request Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Other_Teams_Impacted__c</fullName>
        <label>Other Teams Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Client Implementation</fullName>
                </value>
                <value>
                    <fullName>Client Success</fullName>
                </value>
                <value>
                    <fullName>Commercial Marketing</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
                <value>
                    <fullName>DOPS</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Enrollment Marketing</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Member Support/Ops</fullName>
                </value>
                <value>
                    <fullName>Sales - Commercial</fullName>
                </value>
                <value>
                    <fullName>Sales - HSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Owned_programs_outside_Livongo__c</fullName>
        <label>Owned programs outside Livongo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>LVGO__Case__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Ready_to_nurture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ready to nurture and move to Jira</description>
        <label>Ready to nurture?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Reason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User didn&apos;t attend training</fullName>
                </value>
                <value>
                    <fullName>Complex functionality</fullName>
                </value>
                <value>
                    <fullName>Existing problem</fullName>
                </value>
                <value>
                    <fullName>Instructions not clear</fullName>
                </value>
                <value>
                    <fullName>New problem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Reference_Needed_by__c</fullName>
        <label>Reference needed by?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Requestor__c</fullName>
        <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__So_That__c</fullName>
        <label>So That:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Story in Jira</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Review in future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LVGO__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Data Upload or Backfill</fullName>
                </value>
                <value>
                    <fullName>New Dropdown Value</fullName>
                </value>
                <value>
                    <fullName>New Field(s)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__SuppliedCompany__c</fullName>
        <label>Web Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__SuppliedEmail__c</fullName>
        <label>Web Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LVGO__SuppliedName__c</fullName>
        <label>Web Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__SuppliedPhone__c</fullName>
        <label>Web Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Technical_Requirements__c</fullName>
        <label>Technical Requirements</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Reference Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LV Case</label>
    <listViews>
        <fullName>LVGO__AllOpenCases</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>LVGO__CreatedDate__c</columns>
        <columns>NAME</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Case_Team__c</columns>
        <columns>LVGO__Case_Area__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LVGO__Status__c</field>
            <operation>notEqual</operation>
            <value>Story in Jira,Closed</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>LVGO__All_Cases</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>NAME</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LVGO__CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>LVGO__All_Open_Reference_Requests</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Account__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LVGO__Case__c.LVGO__Reference_Request</value>
        </filters>
        <filters>
            <field>LVGO__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Reference Requests</label>
    </listViews>
    <listViews>
        <fullName>LVGO__All_Reference_Requests</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Account__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LVGO__Case__c.LVGO__Reference_Request</value>
        </filters>
        <label>All Reference Requests</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Cases_for_review</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>NAME</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LVGO__Status__c</field>
            <operation>equals</operation>
            <value>Story in Jira,Closed</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>lessOrEqual</operation>
            <value>10/31/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/1/2020 12:00 AM</value>
        </filters>
        <label>Cases_for_review</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Client_Implementation</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>NAME</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>LVGO__CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LVGO__Case_Team__c</field>
            <operation>equals</operation>
            <value>Client Implementation</value>
        </filters>
        <filters>
            <field>LVGO__Status__c</field>
            <operation>equals</operation>
            <value>Open,In Review,Awaiting Response,On Hold,Escalated,Story Groomed</value>
        </filters>
        <label>Client Implementation</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Client_Implementation_Requested_Cases</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>NAME</columns>
        <columns>LVGO__Type__c</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LVGO__Case_Team__c</field>
            <operation>equals</operation>
            <value>Client Implementation</value>
        </filters>
        <filters>
            <field>LVGO__Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Client Implementation Requested Cases</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Client_Success</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>NAME</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>LVGO__CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LVGO__Case_Team__c</field>
            <operation>equals</operation>
            <value>Client Success</value>
        </filters>
        <label>Client Success</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Closed_Cases</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LVGO__ClosedDate__c</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Case_Team__c</columns>
        <columns>LVGO__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LVGO__Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Commerical_Strategic_Sales</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>NAME</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>LVGO__CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LVGO__Case_Team__c</field>
            <operation>equals</operation>
            <value>Sales,Sales - HSS</value>
        </filters>
        <filters>
            <field>LVGO__Status__c</field>
            <operation>equals</operation>
            <value>Open,In Review,Awaiting Response,On Hold,Escalated,Story Groomed</value>
        </filters>
        <label>Commerical/Strategic Sales</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Eligibility</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>NAME</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>LVGO__CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LVGO__Case_Team__c</field>
            <operation>equals</operation>
            <value>Eligibility</value>
        </filters>
        <filters>
            <field>LVGO__Status__c</field>
            <operation>equals</operation>
            <value>Open,In Review,Awaiting Response,On Hold,Escalated,Story Groomed</value>
        </filters>
        <label>Eligibility</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Enrollment_Marketing</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>NAME</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>LVGO__CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LVGO__Case_Team__c</field>
            <operation>equals</operation>
            <value>Enrollment Marketing</value>
        </filters>
        <filters>
            <field>LVGO__Status__c</field>
            <operation>equals</operation>
            <value>Open,In Review,Awaiting Response,On Hold,Escalated,Story Groomed</value>
        </filters>
        <label>Enrollment Marketing</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Livongo_Presale</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LVGO__CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LVGO__Case__c.LVGO__Livongo_Presale</value>
        </filters>
        <label>ALL - Livongo Presale</label>
    </listViews>
    <listViews>
        <fullName>LVGO__MyCases</fullName>
        <columns>LVGO__CaseNumber__c</columns>
        <columns>NAME</columns>
        <columns>LVGO__Reason__c</columns>
        <columns>LVGO__Subject__c</columns>
        <columns>LVGO__Sub_Type__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Priority__c</columns>
        <columns>LVGO__CreatedDate__c</columns>
        <columns>LVGO__ClosedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LVGO__Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>LVGO__MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LVGO__ClosedDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <nameField>
        <label>Case_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Cases</pluralLabel>
    <recordTypes>
        <fullName>LVGO__CRM_Request</fullName>
        <active>true</active>
        <label>CRM Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>LVGO__Livongo_Presale</fullName>
        <active>true</active>
        <label>Livongo Presale</label>
    </recordTypes>
    <recordTypes>
        <fullName>LVGO__Livongo_Wins</fullName>
        <active>true</active>
        <label>Livongo Wins</label>
    </recordTypes>
    <recordTypes>
        <fullName>LVGO__Reference_Request</fullName>
        <active>true</active>
        <label>Reference Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LVGO__Jira_Link_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( LVGO__Status__c , &quot;Story in Jira&quot;)
    &amp;&amp;  ISBLANK( LVGO__Jira_Link__c ) &amp;&amp; $Setup.LVGO__LVGO_Automation_Switch__c.LVGO__Validations__c</errorConditionFormula>
        <errorDisplayField>LVGO__Jira_Link__c</errorDisplayField>
        <errorMessage>Please fill in the Jira Link URL before moving the Status to Story in Jir</errorMessage>
    </validationRules>
</CustomObject>